kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab3
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: nginx
