kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lab3
  annotations:
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab3
                port:
                  number: 80
          - path: /homepage
            pathType: Prefix
            backend:
              service:
                name: lab3
                port:
                  number: 80
